@@ -1793,10 +1793,19 @@ operator|new
 name|HashMap
 argument_list|()
 decl_stmt|;
-comment|// String copyDestAbsolutePath -> Set (ArtifactDownloadReport source)
+comment|// String copyDestAbsolutePath -> Set (ArtifactRevisionId source)
 specifier|final
 name|Map
 name|conflictsMap
+init|=
+operator|new
+name|HashMap
+argument_list|()
+decl_stmt|;
+comment|// String copyDestAbsolutePath -> Set (ArtifactDownloadReport source)
+specifier|final
+name|Map
+name|conflictsReportsMap
 init|=
 operator|new
 name|HashMap
@@ -2095,6 +2104,19 @@ name|copyDest
 argument_list|)
 decl_stmt|;
 name|Set
+name|conflictsReports
+init|=
+operator|(
+name|Set
+operator|)
+name|conflictsReportsMap
+operator|.
+name|get
+argument_list|(
+name|copyDest
+argument_list|)
+decl_stmt|;
+name|Set
 name|conflictsConf
 init|=
 operator|(
@@ -2132,6 +2154,29 @@ expr_stmt|;
 block|}
 if|if
 condition|(
+name|conflictsReports
+operator|==
+literal|null
+condition|)
+block|{
+name|conflictsReports
+operator|=
+operator|new
+name|HashSet
+argument_list|()
+expr_stmt|;
+name|conflictsReportsMap
+operator|.
+name|put
+argument_list|(
+name|copyDest
+argument_list|,
+name|conflictsReports
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
 name|conflictsConf
 operator|==
 literal|null
@@ -2153,7 +2198,23 @@ name|conflictsConf
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
 name|conflicts
+operator|.
+name|add
+argument_list|(
+name|artifact
+operator|.
+name|getArtifact
+argument_list|()
+operator|.
+name|getId
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|conflictsReports
 operator|.
 name|add
 argument_list|(
@@ -2167,6 +2228,7 @@ argument_list|(
 name|conf
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 comment|// resolve conflicts if any
@@ -2243,7 +2305,15 @@ init|=
 operator|new
 name|ArrayList
 argument_list|(
-name|artifacts
+operator|(
+name|Collection
+operator|)
+name|conflictsReportsMap
+operator|.
+name|get
+argument_list|(
+name|copyDest
+argument_list|)
 argument_list|)
 decl_stmt|;
 comment|// conflicts battle is resolved by a sort using a conflict resolving policy
