@@ -217,6 +217,34 @@ name|org
 operator|.
 name|apache
 operator|.
+name|ivy
+operator|.
+name|util
+operator|.
+name|Message
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
+name|util
+operator|.
+name|MockMessageLogger
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|tools
 operator|.
 name|ant
@@ -533,6 +561,132 @@ argument_list|)
 operator|.
 name|exists
 argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testRetrieveSameFileConflict
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// mod1.1 depends on mod1.2
+name|ResolveReport
+name|report
+init|=
+name|ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/org1/mod1.4/ivys/ivy-1.0.1.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+name|getResolveOptions
+argument_list|(
+operator|new
+name|String
+index|[]
+block|{
+literal|"*"
+block|}
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|report
+argument_list|)
+expr_stmt|;
+name|ModuleDescriptor
+name|md
+init|=
+name|report
+operator|.
+name|getModuleDescriptor
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|md
+argument_list|)
+expr_stmt|;
+name|String
+name|pattern
+init|=
+literal|"build/test/retrieve/[module]/[artifact]-[revision].[ext]"
+decl_stmt|;
+name|MockMessageLogger
+name|mockLogger
+init|=
+operator|new
+name|MockMessageLogger
+argument_list|()
+decl_stmt|;
+name|Message
+operator|.
+name|setDefaultLogger
+argument_list|(
+name|mockLogger
+argument_list|)
+expr_stmt|;
+name|ivy
+operator|.
+name|retrieve
+argument_list|(
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+argument_list|,
+name|pattern
+argument_list|,
+name|getRetrieveOptions
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+operator|new
+name|File
+argument_list|(
+name|IvyPatternHelper
+operator|.
+name|substitute
+argument_list|(
+name|pattern
+argument_list|,
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.2"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"default"
+argument_list|)
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|mockLogger
+operator|.
+name|assertLogDoesntContain
+argument_list|(
+literal|"conflict on"
 argument_list|)
 expr_stmt|;
 block|}
